# sftr-unmatch-detector

./: .gitignore  QA_AUDIT_REPORT.md  README.md  check-docker-stack.sh  clean-docker-stack.sh  docker-compose.yml  start-docker-stack.sh  stop-docker-stack.sh
backend/: .dockerignore  .env.example  Dockerfile  generate_fields.py  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/data/: predatadas_fields.json  sftr_fields.json
backend/app/routers/: ai.py  analytics.py  auth.py  reporting.py  sessions.py
backend/app/services/: ai_agents.py  column_mapping.py  comparison.py  demo_users.py  export.py  field_registry.py  file_parser.py  llm_provider.py  llm_runtime.py  regulatory_reporting.py  report_cache.py  report_export.py  tolerances.py  validators.py
backend/sample_data/: emisor_report.csv  generate_csv.py  generate_march_2026_csvs.py  generate_predatadas_csvs.py  receptor_report.csv  sftr_reconciliation_demo.csv  sftr_reconciliation_sample.csv
backend/sample_data/april_2026/: audit_summary.json  sftr_reconciliation_2026-04-01.csv  sftr_reconciliation_2026-04-02.csv  sftr_reconciliation_2026-04-03.csv  sftr_reconciliation_2026-04-04.csv  sftr_reconciliation_2026-04-05.csv  sftr_reconciliation_2026-04-06.csv  sftr_reconciliation_2026-04-07.csv  sftr_reconciliation_2026-04-08.csv  sftr_reconciliation_2026-04-09.csv  (+21 more)
backend/tests/: conftest.py  test_ai_guardrails.py  test_comparison.py  test_file_parser.py  test_llm_usage_limits.py  test_tolerances.py  test_upload_endpoint.py  test_validators.py
(+105 files in other folders)
